tests/NormalTests/paczka1/small_fuzzy/70376983.err
Error in line 8: e0mZG7es A292 -1,9
Error in line 1: S298 S298 78,2
Error in line 9: S298 A691 64,9
Error in line 15: 3YBEZOe4 A589 80,6
